--- a/style.css
+++ b/style.css
@@ -129,3 +129,31 @@ nav {
   margin-top: 5px;
 }
 
+/* MAIN FORM */
+.form-container {
+  background: #fff;
+  max-width: 598px;
+  height: 46px;
+  margin: 32px auto;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  border: 1px solid #e0e1e0;
+  border-radius: 8px;
+}
+
+.form-container form {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  color: #5f6368;
+}
+.note-text {
+  border: none;
+  font-size: 1rem;
+  height: 100%;
+  padding: 10px;
+  margin-left: 10px;
+}
+.form-actions {
+  display: flex;
+}
+
