--- a/style.css
+++ b/style.css
@@ -296,12 +296,42 @@ input:focus {
   display: flex;
 }
 
+.active-form form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 .active-form {
 }
 .active-form form {
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 10px;
 }
+.active-form form .form-actions .icons {
+  display: flex;
+}
+.active-form form .form-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 5px;
+}
+.close-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.small-icon {
+  color: black;
+  font-size: 1.1rem;
+}
+
+
+
+
 
 
