--- a/style.css
+++ b/style.css
@@ -330,6 +330,61 @@ input:focus {
   font-size: 1.1rem;
 }
 
+/* ALL NOTES */
+.notes {
+  display: flex;
+  justify-content: center;
+}
+.note {
+  background: white;
+  width: 240px;
+  margin: 10px;
+  border: 1px solid #e0e1e0;
+  border-radius: 8px;
+}
+.note .title {
+  width: 100%;
+  margin: 15px 0 0 15px;
+}
+.note .text {
+  width: 100%;
+  margin: 10px 0 0 15px;
+}
+.note .note-footer {
+  display: flex;
+  margin-top: 15px;
+  padding: 0;
+  justify-content: center;
+}
+.note-footer .material-icons-outlined {
+  color: #5f6368;
+}
+
+/* MODAL CONTENT */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgb(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+}
+
+.modal-content {
+  width: 589px;
+  position: relative;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.open-modal {
+  visibility: visible;
+}
+
+
+
 
 
 
